Update: finished numpy arrays

--- a/numpy/arrays.ipynb
+++ b/numpy/arrays.ipynb
@@ -118,23 +118,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([30, 20, 36, 10, 31, 10,  8,  2, 24, 37])"
+       "2"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "random_array = np.random.randint(0,50,10)\n",
-    "random_array"
+    "random_array_max = random_array.max()\n",
+    "random_array_min = random_array.min()\n",
+    "random_array_max_index = random_array.argmax()\n",
+    "random_array_max_index"
    ]
   },
   {
@@ -160,6 +163,33 @@
    "source": [
     "arr.reshape(5,5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(25,)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
