--- a/numpy/Arrays.ipynb
+++ b/numpy/Arrays.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,24 +272,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([26, 44, 40, 18, 46, 10, 36, 34, 18, 30, 24, 32, 38, 40, 34, 22, 14,\n",
-       "       40, 12, 22, 24])"
+       "array([10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38, 40, 42,\n",
+       "       44, 46, 48, 50])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arr_1_even = arr_1[arr_1 % 2 == 0]\n",
+    "arr_1_even = np.arange(10,51,2)\n",
     "arr_1_even"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 2],\n",
+       "       [3, 4, 5],\n",
+       "       [6, 7, 8]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_3 = np.arange(0,9).reshape(3,3)\n",
+    "arr_3"
    ]
   }
  ],
