--- a/numpy/Arrays.ipynb
+++ b/numpy/Arrays.ipynb
@@ -314,6 +314,77 @@
     "arr_3 = np.arange(0,9).reshape(3,3)\n",
     "arr_3"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_identity_matrix = np.eye(3)\n",
+    "arr_identity_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.03051181])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#generate random number between 0 and 1\n",
+    "arry_random_1 = np.random.rand(1)\n",
+    "arry_random_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.57707352,  1.19503539,  1.16414378, -1.24281438, -1.14697034,\n",
+       "        1.84120754,  0.08905472,  0.91128741,  1.51588054,  2.07541281,\n",
+       "        1.64716357, -2.06767698,  0.49136489, -0.01076458, -0.67282306,\n",
+       "       -0.78608634,  0.54569958,  0.4514585 ,  0.63533785,  0.31901872,\n",
+       "        0.08878727,  0.09626443,  1.08741176, -0.59001385,  0.06727718])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Use NumPy to generate an array of 25 random numbers sampled from a standard normal distribution\n",
+    "arry_random_2 = np.random.randn(25)\n",
+    "arry_random_2"
+   ]
   }
  ],
  "metadata": {
