Update: pandas series final

--- a/pandas/series.ipynb
+++ b/pandas/series.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -90,15 +90,62 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "series1 = pd.Series([1, 2, 3, 4], index=['USA', 'GERMANY', 'USSR', 'JAPAN'])\n",
-    "series2 = pd.Series([1, 2, 5, 4], index=['TANZANIA', 'KENYA', 'UGANDA', 'RWANDA'])\n",
+    "series2 = pd.Series([1, 2, 5, 4], index=['USA', 'KENYA', 'UGANDA', 'RWANDA'])\n",
     "series1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "series1['USA']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GERMANY    NaN\n",
+       "JAPAN      NaN\n",
+       "KENYA      NaN\n",
+       "RWANDA     NaN\n",
+       "UGANDA     NaN\n",
+       "USA        2.0\n",
+       "USSR       NaN\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "series1 + series2"
    ]
   }
  ],
