--- a/pandas/DataFrames.ipynb
+++ b/pandas/DataFrames.ipynb
@@ -717,6 +717,295 @@
    "source": [
     "df.loc[['A','B'], ['W','X']]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "booldf = df > 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>W</th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
+       "      <th>Z</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>2.706850</td>\n",
+       "      <td>0.628133</td>\n",
+       "      <td>0.907969</td>\n",
+       "      <td>0.503826</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B</th>\n",
+       "      <td>0.651118</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.605965</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.740122</td>\n",
+       "      <td>0.528813</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>D</th>\n",
+       "      <td>0.188695</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.955057</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>E</th>\n",
+       "      <td>0.190794</td>\n",
+       "      <td>1.978757</td>\n",
+       "      <td>2.605967</td>\n",
+       "      <td>0.683509</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          W         X         Y         Z\n",
+       "A  2.706850  0.628133  0.907969  0.503826\n",
+       "B  0.651118       NaN       NaN  0.605965\n",
+       "C       NaN  0.740122  0.528813       NaN\n",
+       "D  0.188695       NaN       NaN  0.955057\n",
+       "E  0.190794  1.978757  2.605967  0.683509"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[booldf]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>W</th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
+       "      <th>Z</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>2.706850</td>\n",
+       "      <td>0.628133</td>\n",
+       "      <td>0.907969</td>\n",
+       "      <td>0.503826</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B</th>\n",
+       "      <td>0.651118</td>\n",
+       "      <td>-0.319318</td>\n",
+       "      <td>-0.848077</td>\n",
+       "      <td>0.605965</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>D</th>\n",
+       "      <td>0.188695</td>\n",
+       "      <td>-0.758872</td>\n",
+       "      <td>-0.933237</td>\n",
+       "      <td>0.955057</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>E</th>\n",
+       "      <td>0.190794</td>\n",
+       "      <td>1.978757</td>\n",
+       "      <td>2.605967</td>\n",
+       "      <td>0.683509</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          W         X         Y         Z\n",
+       "A  2.706850  0.628133  0.907969  0.503826\n",
+       "B  0.651118 -0.319318 -0.848077  0.605965\n",
+       "D  0.188695 -0.758872 -0.933237  0.955057\n",
+       "E  0.190794  1.978757  2.605967  0.683509"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['W'] > 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outside = ['G1', 'G1', 'G1', 'G2', 'G2', 'G2']\n",
+    "inside = [1, 2, 3, 1, 2, 3]\n",
+    "hier_index = list(zip(outside,inside))\n",
+    "hier_index = pd.MultiIndex.from_tuples(hier_index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(np.random.randn(6,2), hier_index, ['A','B'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">G1</th>\n",
+       "      <th>1</th>\n",
+       "      <td>0.302665</td>\n",
+       "      <td>1.693723</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-1.706086</td>\n",
+       "      <td>-1.159119</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.134841</td>\n",
+       "      <td>0.390528</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">G2</th>\n",
+       "      <th>1</th>\n",
+       "      <td>0.166905</td>\n",
+       "      <td>0.184502</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.807706</td>\n",
+       "      <td>0.072960</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.638787</td>\n",
+       "      <td>0.329646</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             A         B\n",
+       "G1 1  0.302665  1.693723\n",
+       "   2 -1.706086 -1.159119\n",
+       "   3 -0.134841  0.390528\n",
+       "G2 1  0.166905  0.184502\n",
+       "   2  0.807706  0.072960\n",
+       "   3  0.638787  0.329646"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
   }
  ],
  "metadata": {
