--- a/pandas/DataFrames.ipynb
+++ b/pandas/DataFrames.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1767,6 +1767,130 @@
    "outputs": [],
    "source": [
     "df.to_csv('Example.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_html('https://www.fdic.gov/resources/resolutions/bank-failures/failed-bank-list/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Bank NameBank</th>\n",
+       "      <th>CityCity</th>\n",
+       "      <th>StateSt</th>\n",
+       "      <th>CertCert</th>\n",
+       "      <th>Acquiring InstitutionAI</th>\n",
+       "      <th>Closing DateClosing</th>\n",
+       "      <th>FundFund</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Citizens Bank</td>\n",
+       "      <td>Sac City</td>\n",
+       "      <td>IA</td>\n",
+       "      <td>8758</td>\n",
+       "      <td>Iowa Trust &amp; Savings Bank</td>\n",
+       "      <td>November 3, 2023</td>\n",
+       "      <td>10545</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Heartland Tri-State Bank</td>\n",
+       "      <td>Elkhart</td>\n",
+       "      <td>KS</td>\n",
+       "      <td>25851</td>\n",
+       "      <td>Dream First Bank, N.A.</td>\n",
+       "      <td>July 28, 2023</td>\n",
+       "      <td>10544</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>First Republic Bank</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>59017</td>\n",
+       "      <td>JPMorgan Chase Bank, N.A.</td>\n",
+       "      <td>May 1, 2023</td>\n",
+       "      <td>10543</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Signature Bank</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>57053</td>\n",
+       "      <td>Flagstar Bank, N.A.</td>\n",
+       "      <td>March 12, 2023</td>\n",
+       "      <td>10540</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Silicon Valley Bank</td>\n",
+       "      <td>Santa Clara</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>24735</td>\n",
+       "      <td>First–Citizens Bank &amp; Trust Company</td>\n",
+       "      <td>March 10, 2023</td>\n",
+       "      <td>10539</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Bank NameBank       CityCity StateSt  CertCert  \\\n",
+       "0             Citizens Bank       Sac City      IA      8758   \n",
+       "1  Heartland Tri-State Bank        Elkhart      KS     25851   \n",
+       "2       First Republic Bank  San Francisco      CA     59017   \n",
+       "3            Signature Bank       New York      NY     57053   \n",
+       "4       Silicon Valley Bank    Santa Clara      CA     24735   \n",
+       "\n",
+       "               Acquiring InstitutionAI Closing DateClosing  FundFund  \n",
+       "0            Iowa Trust & Savings Bank    November 3, 2023     10545  \n",
+       "1               Dream First Bank, N.A.       July 28, 2023     10544  \n",
+       "2            JPMorgan Chase Bank, N.A.         May 1, 2023     10543  \n",
+       "3                  Flagstar Bank, N.A.      March 12, 2023     10540  \n",
+       "4  First–Citizens Bank & Trust Company      March 10, 2023     10539  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[0].head()"
    ]
   }
  ],
