Update: added labels and title

--- a/matplotlib/Basics.ipynb
+++ b/matplotlib/Basics.ipynb
@@ -200,7 +200,10 @@
    "source": [
     "fig = plt.figure()\n",
     "ax = fig.add_axes([0, 0, 1, 1])\n",
-    "ax.plot(x,y)"
+    "ax.plot(x,y)\n",
+    "ax.set_title('Title')\n",
+    "ax.set_xlabel('X')\n",
+    "ax.set_ylabel('Y')"
    ]
   }
  ],
