--- a/matplotlib/Basics.ipynb
+++ b/matplotlib/Basics.ipynb
@@ -9,15 +9,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import pandas as pd\n",
     "%matplotlib inline"
    ]
   },
