Update: display plot for the data

--- a/stock-markey-analysis/first-exercise.ipynb
+++ b/stock-markey-analysis/first-exercise.ipynb
@@ -124,6 +124,17 @@
    "source": [
     "tesla.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tesla['Open'].plot(label = 'Tesla', figsize=(16,8), title = 'Open Price')\n",
+    "gm['Open'].plot(label = 'GM')\n",
+    "ford['Open'].plot(label = 'Ford')"
+   ]
   }
  ],
  "metadata": {
