Update: removed missing values and changed index

--- a/stock-markey-analysis/ewma.ipynb
+++ b/stock-markey-analysis/ewma.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,94 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "airline = pd.read_csv('airline_passengers.csv', index_col='Month')\n",
+    "airline.dropna(inplace=True)\n",
+    "airline.index = pd.to_datetime(airline.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Thousands of Passengers</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Month</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1949-01-01</th>\n",
+       "      <td>112.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1949-02-01</th>\n",
+       "      <td>118.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1949-03-01</th>\n",
+       "      <td>132.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1949-04-01</th>\n",
+       "      <td>129.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1949-05-01</th>\n",
+       "      <td>121.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Thousands of Passengers\n",
+       "Month                              \n",
+       "1949-01-01                    112.0\n",
+       "1949-02-01                    118.0\n",
+       "1949-03-01                    132.0\n",
+       "1949-04-01                    129.0\n",
+       "1949-05-01                    121.0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "airline.head()"
    ]
   }
  ],
@@ -20,7 +108,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.9"
   }
  },
